--- a/index.css
+++ b/index.css
@@ -3,7 +3,39 @@
 }
 
 .tile {
-    display: flex;
-    height: 40px;
-    font-size: 25px;
+  display: flex;
+  height: 25px;
+  font-size: 25px;
+  justify-content: flex-start;
+}
+
+.tile img {
+  height: 25px;
+}
+
+.tile input {
+  height: 20px;
+}
+
+.tile * {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.file {
+  width: 200px;
+}
+
+.directory {
+  width: 400px;
+}
+
+.tile button {
+  height: 20px;
+}
+
+.show-textboxes {
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-bottom: 10px;
 }
